[package]
name = "samplecli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.23", features = ["derive"] }

[[bin]]
name = "clap-builder"
path = "src/clap-builder.rs"

[[bin]]
name = "clap-derive"
path = "src/clap-derive.rs"

[[bin]]
name = "rpn"
path = "src/rmn.rs"
